name:                posplyu
version:             0.1.0.0
synopsis:            Sleep tracker for X11, using XScreenSaver extension and manual input.
-- description:
license:             MIT
license-file:        LICENSE
author:              Sergey Alirzaev
maintainer:          zl29ah@gmail.com
build-type:          Simple
cabal-version:       >= 1.10

executable posplyu
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.11 && < 4.12,
                        X11 >= 1.9 && < 1.10,
                        transformers >= 0.5.5.0 && < 0.6,
                        time >= 1.8.0.2 && < 1.9,
                        split >= 0.2.3.3 && < 0.3,
                        unix >= 2.7.2.2 && < 2.8,
                        process >= 1.6.3.0 && < 1.7
  -- hs-source-dirs:
  default-language:     Haskell2010
  ghc-options:          -fno-warn-tabs
